SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
/* ... */
.spixi-expansion-box-middle {
    float:left;
    margin-left: 18px;
    font-size: 12pt;
    font-weight: bold;
    color: #000;
}

.spixi-expansion-box-right {
    float:right;
    margin-right: 18px;
    color: #c2185b;
}

/* Sidebar */
.spixi-sidebar {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 5000; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */

}
.spixi-sidebar-content {
    position: relative;
    background-color: #1f1f27;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.89);    
    height: 100%;
    width: 75%;
    -webkit-animation-name: animateleft;
    -webkit-animation-duration: 0.4s;
    animation-name: animateleft;
    animation-duration: 0.4s
}

.spixi-sidebar-header {
    padding: 38px 24px;
    background-color: #191324;
    color: white;
    height: 204px;
    font-size: 16px;
    text-align: center;
}

.spixi-sidebar-closebutton {
    color: white;
    font-size: 18pt;
    text-align: left;
    width: 100%;
}

.spixi-sidebar-avatar {
    width:70px;
    height:70px;
    border-radius: 70px;
    margin-top: 0px;
    margin-left: 0px;
}
.spixi-sidebar-avatar-holder {
    text-align: left;
    margin-top: 36px;
}
.spixi-sidebar-title {
    text-align: left;
    font-size: 14pt;
    margin-left: 90px;
    margin-top: -46px;
}

.spixi-sidebar-item {
    height: 52px;
    color: #b5b5b5;
}
.spixi-sidebar-item:hover {
    background-color: #40404b;
}

.spixi-sidebar-item-text {
    padding-top: 14px;
    margin-left: 64px;
    font-size: 16px;    
    height: 52px;
    color: #b5b5b5;
    text-decoration: none;
    border-bottom: 1px solid #40404b;
}
.spixi-sidebar-item-icon {
    float: left;
    color: #b5b5b5;
    font-size: 18pt;
    margin-left: 8px;
    margin-top: 14px;
    width: 40px;
    text-align: center;
}


/* ListItems */
.spixi-list-item {
    width: 100%;
    height: 60px;
    background-color: #eef2f5;
}
.spixi-list-item:hover {
    background-color: #dae2e9;
}
.spixi-list-item:active {
    background-color: #dae2e9;
}

.spixi-list-item .read {
    color: #a3a4a5;
}

.spixi-list-item-row {
    border-bottom: 1px solid #d1d5d7;
}

.spixi-list-item-avatar {
    width:40px;
    height:40px;
    border-radius: 40px;
    margin-top: 10px;
    margin-left: 0px;
}

.spixi-list-item-left {
    margin-top: 20px;    
    height: 40px;    
    left: 30px;
    border-bottom: 1px solid #d1d5d7;
}

.spixi-list-item-center {
    height: 60px;
    border-bottom: 1px solid #d1d5d7;
}

.spixi-list-item-title {
    color: #000000;
    font-size: 10pt;
    margin-top: 10px;
}
.spixi-list-item-title-center {
    color: #000000;
    font-size: 10pt;
    margin-top: 18px;
}

.spixi-list-item-subtitle {
    font-size: 9pt;
    margin-bottom: 10px;
}

.spixi-list-item-right {
    margin-top: 20px;    
    height: 40px;
    right: 30px;
    font-size: 9pt;
    text-align: right;
    border-bottom: 1px solid #d1d5d7;
}

/* Chat */
.spixi-bubble
{
    font-size: 10pt;
    position:relative;
    background:#ffffff;
    border-radius:16px;
    border: 1px solid #c1d3e0;    
    color: black;
    
    margin-left: 56px;
    margin-right: 85px;
    margin-bottom: 20px;
    padding: 15px;
    padding-top: 10px;
    min-width: 80px;
    padding-bottom: 28px;   
    
    animation-name: chat_animation;
    animation-duration: 0.3s;     
}
.spixi-bubble.myself {
    margin-left: 125px;
    margin-right: 11px;
    background: #cbe3f1;
    border: 0;
}

.spixi-bubble .time
{
    padding-top: 5px;
    font-size: 7pt;
    color: #000;
    z-index: 4;
    position: absolute;
}
.spixi-bubble.myself .time {
    text-align: right;
    right: 15px;
}

.spixi-bubble .avatar
{
    position: absolute;
    left: -45px;
    z-index: 6;
    bottom: 0px;
    width: 32px;
    height: 32px;
    border-radius: 32px;    
}


.chatholder {
    -moz-transition: all 0.6s ease-in-out;
    -ms-transition: all 0.6s ease-in-out;
    -o-transition: all 0.6s ease-in-out;
    -webkit-transition: all 0.6s ease-in-out;
    transition: all 0.6s;    
    
    width: 100%;
    height: 57px;
   /* background-color: aqua;*/
}
#chatbar {
    -moz-transition: all 0.6s ease-in-out;
    -ms-transition: all 0.6s ease-in-out;
    -o-transition: all 0.6s ease-in-out;
    -webkit-transition: all 0.6s ease-in-out;
    transition: all 0.6s;
    
    position: fixed;
    z-index: 99;
    display: table;
    width: 100%;
    bottom: 0;   
    height: 60px;
    background-color: #F3F3F3;
    border-top: 1px solid #a6a9ab;
}
#chat_input {
    display: table-cell;
    width: 100%;
    height: 45px;
    margin-top: 10px;
    padding: 12px 14px;
    border: 1px solid #888;
    border-radius: 25px;
    background-color: #F3F3F3;
    font-size: 16px;
    outline: none;
}

#chatattachbar {
    -moz-transition: all 0.6s ease-in-out;
    -ms-transition: all 0.6s ease-in-out;
    -o-transition: all 0.6s ease-in-out;
    -webkit-transition: all 0.6s ease-in-out;
    transition: all 0.6s;
    
    position: fixed;
    z-index: 99;    
    width: 100%;
    bottom: -55px;
    height: 55px;
    background-color: #F3F3F3;
    border-top: 1px solid #CBCBCB;
}

#chat_attach {
    display: table-cell;
    width: 50px;
    height: 50px;
    font-size: 16pt;
    text-align: center;
    color: #1693da;
}

#ca_request {
    position: absolute;
    left: 120px;
    width: 120px;
    height: 55px;
    font-size: 12px;
    text-align: center;
    padding-top: 35px;
    background-image: url('../img/Request_icon_idle.png');
    background-repeat: no-repeat;
    background-size: 30px 30px;
    background-position: center 5px;
}
/* ... */

